--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -3,3 +3,20 @@
     top: 40%;
     left: 0;
 }
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #9e0b37;
+    color: #EA7A4E
+;
+}
